--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,6 +2,19 @@
   padding: 25px;
 }
 
+.exchange-toggles {
+  margin-bottom: 25px;
+}
+
+.pair-select {
+  margin-right: 25px;
+  width: 100px;
+}
+
+.market-select {
+  margin-left: 6px;
+}
+
 .bids-book,
 .asks-book {
   display: inline-block;
